syntax = "proto3";

package user;

option go_package = "./proto;proto";


service UserService {
  rpc RegisterUser (RegisterRequest) returns (UserResponse);
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc GetUserProfile (UserID) returns (UserProfile);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message UserID {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string message = 2;
}

message AuthResponse {
  bool success = 1;
  string token = 2;
}

message UserProfile {
  string id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
}
